# peak-intelligence

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
.github/: copilot-instructions.md
scripts/: generate_sample_pdf.py
src/med_redact_demo/: __init__.py  config.py  qa.py  redaction.py  ui.py
src/peak_intelligence/: qa.py  ui.py
